Minor fix for the PDF Viewer

--- a/filieres/seg/s1/index.html
+++ b/filieres/seg/s1/index.html
@@ -80,7 +80,7 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Analyse Mathématique - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Analyse Mathématique/Analyse Mathématique - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Analyse Mathématique - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Analyse Mathématique/Analyse Mathématique - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -98,7 +98,7 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilité Générale 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilité Générale 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilité Générale 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilité Générale 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -116,7 +116,7 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Management 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Management 1/Management 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Management 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Management 1/Management 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -134,7 +134,7 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Microéconomie 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Microéconomie 1/Microéconomie 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Microéconomie 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Microéconomie 1/Microéconomie 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -152,7 +152,7 @@
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button onclick="createIframe(this)" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Langue et Terminologie 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Langue et Terminologie 1/Langue et Terminologie 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Langue et Terminologie 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Langue et Terminologie 1/Langue et Terminologie 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
