New files : added to media\seg

--- a/filieres/seg/index.html
+++ b/filieres/seg/index.html
@@ -64,6 +64,8 @@
 
             <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s1">S1</a>
 
+            <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s2">S2</a>
+
         </div>
 
     </main>
