--- a/filieres/seg/s1/index.html
+++ b/filieres/seg/s1/index.html
@@ -95,6 +95,18 @@
                 <tbody>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 1.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilite Generale - Cours - Chapitre (20_21) 1.pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilite Generale - Cours - Chapitre (20_21) 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 2.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilite Generale - Cours - Chapitre (20_21) 2.pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilite Generale - Cours - Chapitre (20_21) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 3.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilite Generale - Cours - Chapitre (20_21) 3.pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilite Generale - Cours - Chapitre (20_21) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 4.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilite Generale - Cours - Chapitre (20_21) 4.pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilite Generale - Cours - Chapitre (20_21) 4.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 5.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Comptabilite Generale - Cours - Chapitre (20_21) 5.pdf" href="../../../media/seg/s1/Comptabilité Générale 1/Comptabilite Generale - Cours - Chapitre (20_21) 5.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
@@ -108,15 +120,24 @@
         <!-- Module -->
         <div class="module sm:rounded p-4 my-2 bg-white">
             <!-- Module name -->
-            <div class="text-xl font-bold pb-4">Management 1 :</div>
+            <div class="text-xl font-bold pb-4">Management Generale :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 2.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Management Generale - Cours - Chapitre (20_21) 2.pdf" href="../../../media/seg/s1/Management Generale/Management Generale - Cours - Chapitre (20_21) 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre (20_21) 3.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Management Generale - Cours - Chapitre (20_21) 3.pdf" href="../../../media/seg/s1/Management Generale/Management Generale - Cours - Chapitre (20_21) 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
                         <!-- Corresponding Documents -->
                         <td class="px-1 py-2 w-full font-normal text-left"><ul>
-                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Management 1 - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Management 1/Management 1 - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Exam (22_23) [Normale].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Management Generale - Exams - Exam (22_23) [Normale].pdf" href="../../../media/seg/s1/Management Generale/Management Generale - Exams - Exam (22_23) [Normale].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
                         </ul></td>
                     </tr>
                 </tbody>
@@ -129,6 +150,14 @@
             <div class="text-xl font-bold pb-4">Microéconomie 1 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Cours (18_19) [Ecrit].pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Microeconomie 1 - Cours - Cours (18_19) [Ecrit].pdf" href="../../../media/seg/s1/Microéconomie 1/Microeconomie 1 - Cours - Cours (18_19) [Ecrit].pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
@@ -147,6 +176,16 @@
             <div class="text-xl font-bold pb-4">Langue et Terminologie 1 :</div>
             <table class="w-full border border-gray-300">
                 <tbody>
+                    <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
+                        <!-- Document Type -->
+                        <td class="px-1 text-center border-r border-gray-300 font-normal">Cours</td>
+                        <!-- Corresponding Documents -->
+                        <td class="px-1 py-2 w-full font-normal text-left"><ul>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre 1.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Langue - Cours - Chapitre 1.pdf" href="../../../media/seg/s1/Langue et Terminologie 1/Langue - Cours - Chapitre 1.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre 2.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Langue - Cours - Chapitre 2.pdf" href="../../../media/seg/s1/Langue et Terminologie 1/Langue - Cours - Chapitre 2.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                            <li class="py-1 border-b border-gray-200 last:border-b-0">Chapitre 3.pdf<span class="whitespace-nowrap"><button class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-regular fa-eye"></i></button><a download="Langue - Cours - Chapitre 3.pdf" href="../../../media/seg/s1/Langue et Terminologie 1/Langue - Cours - Chapitre 3.pdf" class="ml-2 py-1 px-3 text-xs font-medium text-center text-white bg-gray-500 rounded-lg hover:bg-gray-700"><i class="fa-solid fa-download"></i></a></span></li>
+                        </ul></td>
+                    </tr>
                     <tr class="odd:bg-gray-50 border-b border-gray-300 last:border-b-0">
                         <!-- Document Type -->
                         <td class="px-1 text-center border-r border-gray-300 font-normal">Exams</td>
