--- a/filieres/smi/index.html
+++ b/filieres/smi/index.html
@@ -62,9 +62,9 @@
 
         <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-2">
 
-            <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s1">S1</a>
+            <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="../smia/s1">S1</a>
 
-            <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s2">S2</a>
+            <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="../smia/s2">S2</a>
 
             <a class="p-4 w-full h-full flex justify-center items-center aspect-square rounded text-3xl transition-all duration-300 text-gray-800 hover:text-gray-400 font-semibold bg-white" href="./s3">S3</a>
 
