Add new files to smi s4

--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -43,7 +43,7 @@
                 </a>
             </div>
         </header>
-        
+
         <main id="container" class="mb-8 mx-auto px-2 w-full sm:w-4/5">
 
             <!-- BreadCrumbs -->
@@ -204,6 +204,12 @@
                                     {"full_name": "Electromagnetisme - TDs - TD (20_21) 1 [avec correction].pdf"},
                                     {"full_name": "Electromagnetisme - TDs - TD (20_21) 2 [avec correction].pdf"},
                                     {"full_name": "Electromagnetisme - TDs - TD (20_21) 3 [avec correction].pdf"},
+                                ]
+                            },
+                            {
+                                "category_name" : "TPs",
+                                "files": [
+                                    {"full_name": "Electromagnetisme - TPs - TP (22_23).pdf"},
                                 ]
                             },
                             {
