New Files added

--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -162,6 +162,12 @@
                                     {"full_name": "Structures des données - Projets - Projet a rendre (22_23).pdf"},
                                 ]
                             },
+                            {
+                                "category_name" : "Exams",
+                                "files": [
+                                    {"full_name": "Structures des données - Exams - Examen Blanc (22_23).pdf"},
+                                ]
+                            },
                         ]
                     },
                     {
@@ -235,6 +241,7 @@
                                 "files": [
                                     {"full_name": "Architecture des ordinateurs - Exams - Exam 1.pdf"},
                                     {"full_name": "Architecture des ordinateurs - Exams - Exam 2.pdf"},
+                                    {"full_name": "Architecture des ordinateurs - Exams - Exam 3.pdf"},
                                 ]
                             },
                         ]
@@ -248,6 +255,7 @@
                                 "files": [
                                     {"full_name": "Programmation 2 - Cours - Partie 1.pdf"},
                                     {"full_name": "Programmation 2 - Cours - Partie 2.pdf"},
+                                    {"full_name": "Programmation 2 - Cours - Partie 3.pdf"},
                                 ]
                             },
                             {
@@ -259,6 +267,7 @@
                                     {"full_name": "Programmation 2 - TDs - TD (22_23) 1.pdf"},
                                     {"full_name": "Programmation 2 - TDs - Exercices sur les fichiers.pdf"},
                                     {"full_name": "Programmation 2 - TDs - Exercice des voitures.pdf"},
+                                    {"full_name": "Programmation 2 - TDs - Exercices sur les listes.pdf"},
                                 ]
                             },
                             {
