New Files added to smi\s5\electro

--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -218,6 +218,17 @@
                                 ]
                             },
                             {
+                                "category_name" : "Exams",
+                                "files": [
+                                    {"full_name": "Electromagnetisme - Exams - Exam (12_13).pdf"},
+                                    {"full_name": "Electromagnetisme - Exams - Exam (13_14).pdf"},
+                                    {"full_name": "Electromagnetisme - Exams - Exam (14_15).pdf"},
+                                    {"full_name": "Electromagnetisme - Exams - Exam (15_16).pdf"},
+                                    {"full_name": "Electromagnetisme - Exams - Exam (16_17).pdf"},
+                                    {"full_name": "Electromagnetisme - Exams - Exam (19_20).pdf"},
+                                ]
+                            },
+                            {
                                 "category_name" : "Autres",
                                 "files": [
                                     {"full_name": "Electromagnetisme - Autres - Impédance et admittances des dipôles.pdf"},
