added new files

--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -226,6 +226,7 @@
                                     {"full_name": "Electromagnetisme - Exams - Exam (15_16).pdf"},
                                     {"full_name": "Electromagnetisme - Exams - Exam (16_17).pdf"},
                                     {"full_name": "Electromagnetisme - Exams - Exam (19_20).pdf"},
+                                    {"full_name": "Electromagnetisme - Exams - Exam (21_22).pdf"},
                                 ]
                             },
                             {
