New files to smi\s4

--- a/filieres/smi/s4/index.html
+++ b/filieres/smi/s4/index.html
@@ -249,6 +249,18 @@
                                 ]
                             },
                             {
+                                "category_name" : "TDs",
+                                "files": [
+                                    {"full_name": "Architecture des ordinateurs - TDs - TD (22_23) 1 .pdf"},
+                                ]
+                            },
+                            {
+                                "category_name" : "Projets",
+                                "files": [
+                                    {"full_name": "Architecture des ordinateurs - Projets - Mini Projets en C.pdf"},
+                                ]
+                            },
+                            {
                                 "category_name" : "Exams",
                                 "files": [
                                     {"full_name": "Architecture des ordinateurs - Exams - Exam 1.pdf"},
