--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
   <head>
 
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NP8XY8F3TS"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NP8XY8F3TS"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'G-NP8XY8F3TS');
-    </script> -->
+    </script>
 
     <title>FPK Biblio</title>    
     <meta name="description" content="Cours, TDs, TPs, Exams des filieres de FP Khouribga">
